RTE: toolbar resizing layout bug (RT #33850)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@16359 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/RTE/ckeditor/_source/skins/wikia/toolbar.css
+++ b/extensions/wikia/RTE/ckeditor/_source/skins/wikia/toolbar.css
@@ -74,6 +74,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 .cke_skin_wikia .cke_toolbar
 {
 	display: inline;
+	height: 32px;
 }
 
 .cke_skin_wikia .cke_separator
